--- a/main.html
+++ b/main.html
@@ -4,13 +4,24 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<style>
+	body{
+	background-color:#f8f8f8;
+	}
+	<style>	
+		
 </head>
+	
 
 <body>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+		
+	
 
+		
 </body>
+		
 
 </html>
