--- a/main.html
+++ b/main.html
@@ -5,27 +5,51 @@
 <head>
 	<link rel="stylesheet" href="styles.css">
 	<style>
-	body{
-	background-color:#f8f8f8;
-	}
-		.book-library{
-			background-color:#ffffff;
-			display:flex;
-			
-		
-		
-		
+.book-library {
+  background-color: #ffffff;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  max-width: 800px;
+
+  padding: 20px;
+}
+
+.book {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 250px;
+  margin: 20px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.book img {
+
+  margin:0 auto;
+  object-fit: cover;
+}
+
+.book h4 {
+ 
+  margin-bottom: 10px;
+}
+
+.book author {
+ 
+  margin-bottom: 10px;
+color:	#777777;
+}
+
+.income {
+  background-color: #2ecc71;
+  padding: 5px 10px;
+  border-radius: 5px;
+  text-align: center;
+}
+		body{
+			background-color:#f8f8f8
 		}
-		author{
-			display:block;
-			padding:15px;
-			color:#777777;
-		}
-		.income{
-			padding:15px;
-			background-color:#2ecc71;
-			
-		
 	</style>	
 		
 </head>
