--- a/main.html
+++ b/main.html
@@ -21,7 +21,7 @@
   width: 100%;
   height: 250px;
   margin: 20px;
-  box-shadow: 0 0 10px rgb(46, 204, 113);
+  box-shadow: rgb(46, 204, 113);
 }
 
 .book img {
