--- a/main.html
+++ b/main.html
@@ -43,7 +43,7 @@ color:	#777777;
 }
 
 .income {
-  background-color: rgb(46, 204, 113);
+   background-color: #2ecc71;
   padding: 5px 10px;
   border-radius: 5px;
   text-align: center;
@@ -52,7 +52,7 @@ color:	#777777;
 		p{
 display:inline;}
 		body{
-			background-color:#f8f8f8
+			background-color:#f8f8f8;
 		}
 	</style>	
 		
